# legacy_test

./: __main__.py  cats.py  dogs.py  ducks.py  fishCanFly.py  fishSimple.py  pyproject.toml  pytest.ini  readme.md  tox.ini
Animals/: __init__.py  animal.py  cat.py  dog.py  duck.py  fish.py  tiger.py
Animals/tests/: test_basic_animal.py  test_other_animals.py
animals/: __init__.py  animal.py  cat.py  dog.py  duck.py  fish.py  tiger.py
animals/tests/: test_basic_animal.py  test_other_animals.py
