[tool.poetry]
name = "legacy_test"
version = "0.1.0"
description = ""
authors = ["zed <kot.zakhar27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.1"
pytest-pylint = "^0.18.0"
tox = "^3.24.4"

[tool.pylint.'FORMAT']
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
